Fixed width being too short for scorecard

--- a/styles.css
+++ b/styles.css
@@ -79,8 +79,8 @@ body {
     border-radius: 6px;
 
     /* Potisioning */
-    min-width: 200px;
-    max-width: 200px;
+    min-width: 204px;
+    max-width: 204px;
     box-sizing: border-box;
     padding: 16px;
 }
